--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: step_rewards
+name: burnbank
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -19,7 +19,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0-231.0.dev
+  sdk: ^">=2.18.0 <3.0.0"
+  flutter: "=3.0.0"
+
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,27 +32,39 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^3.12.1
-  cupertino_icons: ^1.0.2
-  firebase_auth: ^5.5.1
-  cloud_firestore: ^5.6.5
+  
+  # Firebase
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.7.3
+  cloud_firestore: ^4.8.5
+  
+  # Authentication
   google_sign_in: ^6.1.4
-  sign_in_with_apple: ^6.1.4
+  sign_in_with_apple: ^5.0.0
+  
+  # State management
   provider: ^6.0.5
   shared_preferences: ^2.2.0
-  google_mobile_ads: ^5.3.1
-  in_app_purchase: ^3.1.7
-  health: ^12.1.0
-  permission_handler: ^11.4.0
-  fl_chart: ^0.70.2
-  intl: ^0.20.2
+  
+  # UI
+  cupertino_icons: ^1.0.2
+  fl_chart: ^0.63.0
+  cached_network_image: ^3.2.3
+  
+  # Utilities
+  intl: ^0.18.1
   crypto: ^3.0.3
   flutter_dotenv: ^5.1.0
-  connectivity_plus: ^6.1.3
-  cached_network_image: ^3.2.3
+  connectivity_plus: ^4.0.2
   path_provider: ^2.1.0
-  uuid: ^4.5.1
-  url_launcher: ^6.1.12    
+  uuid: ^3.0.7
+  url_launcher: ^6.1.12  
+
+  # The following packages can be uncommented when testing on a real device
+   google_mobile_ads: ^3.0.0
+   in_app_purchase: ^3.1.7
+   health: ^5.0.0
+   permission_handler: ^10.4.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -58,14 +72,15 @@ dependencies:
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter   
+    sdk: flutter 
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -80,7 +95,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
+     - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
