--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: burnbank
-description: "A new Flutter project."
+description: "Step-based reward tracker with Firebase and Apple Health support."
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -21,17 +21,17 @@ dependencies:
   google_sign_in: ^6.1.4
   sign_in_with_apple: ^5.0.0
 
-  # State management
+  # State Management
   provider: ^6.0.5
   shared_preferences: ^2.2.0
 
-  # UI
+  # UI & Charts
   cupertino_icons: ^1.0.8
   fl_chart: ^0.63.0
   cached_network_image: ^3.2.3
 
-  # Utilities
-  intl: ^0.18.1
+  # Utility & Platform Integration
+  intl: ^0.17.0 # Downgraded for health plugin compatibility
   crypto: ^3.0.3
   flutter_dotenv: ^5.1.0
   connectivity_plus: ^4.0.2
@@ -39,11 +39,10 @@ dependencies:
   uuid: ^3.0.7
   url_launcher: ^6.1.12
 
-  # Ads / Monetization / Health
-  # Uncomment when ready:
-  # google_mobile_ads: ^3.0.0
+  # Monetization & Health Integration
+  # google_mobile_ads: ^3.0.0 # Uncomment when you're ready to use ads
   in_app_purchase: ^3.1.7
-  health: ^12.1.0
+  health: ^5.0.0 # Stable version with iOS 14+ support
   permission_handler: ^10.4.3
 
 dev_dependencies:
