--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,3 +58,10 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+scripts:
+  pre-build:
+    - flutter clean
+    - flutter pub get
+    - flutter precache --ios
+
