Fix HealthFactory build issue and Info.plist cleanup

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -13,11 +13,11 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>(com.Bennie.burnbank)</string>
+	<string>com.Bennie.burnbank</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>step_rewards</string>
+	<string>burnbank</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
