--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   cached_network_image: ^3.2.3
 
   # Utility & Platform Integration
-  intl: ^0.20.2 # Downgraded for health plugin compatibility
   crypto: ^3.0.3
   flutter_dotenv: ^5.1.0
   connectivity_plus: ^6.1.3
@@ -46,8 +45,9 @@ dependencies:
   # Monetization & Health Integration
   # google_mobile_ads: ^3.0.0 # Uncomment when you're ready to use ads
   in_app_purchase: ^3.1.7
-  health: ^12.1.0 # Stable version with iOS 14+ support
+  health: ^4.5.0 # Stable version with iOS 14+ support
   permission_handler: ^12.0.0
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
