--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=3.1.0 <4.0.0"
   flutter: ">=3.10.0"
 
 dependencies:
@@ -58,6 +58,13 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+  plugin:
+    platforms:
+      ios:
+        default_package: url_launcher_ios
+      android:
+        default_package: url_launcher_android
 
 scripts:
   pre-build:
