--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,66 +5,65 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.1.0 <4.0.0"
-  flutter: ">=3.10.0"
+  sdk: ">=3.7.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   # Firebase
-  firebase_core: ^3.13.0
-  firebase_auth: ^5.5.2
-  cloud_firestore: ^5.6.6
+  firebase_core: ^3.9.0
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.4.0
 
   # Authentication
   google_sign_in: ^6.1.4
-  sign_in_with_apple: ^7.0.1
+  sign_in_with_apple: ^6.0.0
 
   # State Management
-  provider: ^6.0.5
-  shared_preferences: ^2.2.0
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
 
   # Mapping
-  flutter_map: ^6.1.0
-  geolocator: ^10.1.0
+  flutter_map: ^6.0.0
+  geolocator: ^10.0.1
 
   # UI & Charts
-  cupertino_icons: ^1.0.8
-  fl_chart: ^0.70.2
-  cached_network_image: ^3.2.3
+  cupertino_icons: ^1.0.6
+  fl_chart: ^0.65.0
+  cached_network_image: ^3.3.0
 
   # Utility & Platform Integration
   crypto: ^3.0.3
-  flutter_dotenv: ^5.1.0
-  connectivity_plus: ^6.1.3
-  path_provider: ^2.1.0
-  uuid: ^4.5.1
+  flutter_dotenv: ^5.0.2
+  connectivity_plus: ^5.0.2
+  path_provider: ^2.1.1
+  uuid: ^4.2.1
   url_launcher: ^6.1.12
 
   # Monetization & Health Integration
-  # google_mobile_ads: ^3.0.0 # Uncomment when you're ready to use ads
   in_app_purchase: ^3.1.7
-  health: ^4.5.0 # Stable version with iOS 14+ support
-  permission_handler: ^12.0.0
-  intl: ^0.18.1
+  health: ^4.4.0 # LAST stable version without win32 iOS build error
+  permission_handler: ^11.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/images/
 
-  plugin:
-    platforms:
-      ios:
-        default_package: url_launcher_ios
-      android:
-        default_package: url_launcher_android
+plugin:
+  platforms:
+    ios:
+      default_package: url_launcher_ios
+    android:
+      default_package: url_launcher_android
 
 scripts:
   pre-build:
