--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,39 +19,39 @@ dependencies:
 
   # Authentication
   google_sign_in: ^6.1.4
-  sign_in_with_apple: ^6.0.0
+  sign_in_with_apple: ^7.0.1
 
   # State Management
   provider: ^6.1.1
   shared_preferences: ^2.2.2
 
   # Mapping
-  flutter_map: ^6.0.0
-  geolocator: ^10.0.1
+  flutter_map: ^8.1.1
+  geolocator: ^13.0.4
 
   # UI & Charts
   cupertino_icons: ^1.0.6
-  fl_chart: ^0.65.0
+  fl_chart: ^0.70.2
   cached_network_image: ^3.3.0
 
   # Utility & Platform Integration
   crypto: ^3.0.3
   flutter_dotenv: ^5.0.2
-  connectivity_plus: ^5.0.2
+  connectivity_plus: ^6.1.3
   path_provider: ^2.1.1
   uuid: ^4.2.1
   url_launcher: ^6.1.12
 
   # Monetization & Health Integration
   in_app_purchase: ^3.1.7
-  health: ^4.4.0 # LAST stable version without win32 iOS build error
-  permission_handler: ^11.0.0
-  intl: ^0.18.0
+  health: ^12.1.0 # LAST stable version without win32 iOS build error
+  permission_handler: ^12.0.0+1
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
 
 flutter:
   uses-material-design: true
