--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,6 +9,32 @@ workflows:
         FLUTTER_ROOT: $FLUTTER_ROOT # Ensures podfile sees correct SDK path
 
     scripts:
+      - name: Add HealthKit entitlements and permissions
+        script: |
+          # First create the entitlements file
+          mkdir -p ios/Runner
+          cat > ios/Runner/Runner.entitlements << EOL
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+              <key>com.apple.developer.healthkit</key>
+              <true/>
+              <key>com.apple.developer.healthkit.access</key>
+              <array/>
+          </dict>
+          </plist>
+          EOL
+          
+          # Add health permissions to Info.plist
+          cd ios
+          /usr/libexec/PlistBuddy -c "Add :NSHealthShareUsageDescription string 'We need access to your health data to count steps and calculate rewards'" Runner/Info.plist 2>/dev/null || true
+          /usr/libexec/PlistBuddy -c "Add :NSHealthUpdateUsageDescription string 'We need access to your health data to count steps and calculate rewards'" Runner/Info.plist 2>/dev/null || true
+          
+          # Modify project.pbxproj to reference entitlements file in build settings
+          BUILD_SETTINGS='CODE_SIGN_ENTITLEMENTS = Runner/Runner.entitlements;'
+          perl -i -pe "s/(PRODUCT_BUNDLE_IDENTIFIER = com.Bennie.burnbank;)/\1\n\t\t\t\t$BUILD_SETTINGS/g" Runner.xcodeproj/project.pbxproj
+
       - name: Install Flutter dependencies
         script: |
           flutter pub get
