--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,10 +9,14 @@ workflows:
     ios:
       capabilities:
         - healthkit
+      build_settings:
+        - CODE_SIGN_ENTITLEMENTS=Runner/Runner.entitlements
+        - OTHER_LDFLAGS=$(inherited) -framework HealthKit
 
     scripts:
       - name: Set HealthKit entitlements and Info.plist
         script: |
+          # Create entitlements file
           mkdir -p ios/Runner
           cat > ios/Runner/Runner.entitlements << EOL
           <?xml version="1.0" encoding="UTF-8"?>
@@ -27,12 +31,12 @@ workflows:
           </plist>
           EOL
 
-          cd ios
-          /usr/libexec/PlistBuddy -c "Set :NSHealthShareUsageDescription 'We use HealthKit to track your steps for rewards.'" Runner/Info.plist || \
-          /usr/libexec/PlistBuddy -c "Add :NSHealthShareUsageDescription string 'We use HealthKit to track your steps for rewards.'" Runner/Info.plist
+          # Add HealthKit usage descriptions to Info.plist
+          /usr/libexec/PlistBuddy -c "Set :NSHealthShareUsageDescription 'We use HealthKit to track your steps for rewards.'" ios/Runner/Info.plist || \
+          /usr/libexec/PlistBuddy -c "Add :NSHealthShareUsageDescription string 'We use HealthKit to track your steps for rewards.'" ios/Runner/Info.plist
 
-          /usr/libexec/PlistBuddy -c "Set :NSHealthUpdateUsageDescription 'We sync your step data with HealthKit.'" Runner/Info.plist || \
-          /usr/libexec/PlistBuddy -c "Add :NSHealthUpdateUsageDescription string 'We sync your step data with HealthKit.'" Runner/Info.plist
+          /usr/libexec/PlistBuddy -c "Set :NSHealthUpdateUsageDescription 'We sync your step data with HealthKit.'" ios/Runner/Info.plist || \
+          /usr/libexec/PlistBuddy -c "Add :NSHealthUpdateUsageDescription string 'We sync your step data with HealthKit.'" ios/Runner/Info.plist
 
       - name: Install Flutter dependencies
         script: |
